fixed controls overlay overlapping the head menu; fixed double overflow when showing playlist on a small screen

--- a/sass/player/segmentation/PlayList.scss
+++ b/sass/player/segmentation/PlayList.scss
@@ -1,6 +1,5 @@
 .bg__playlist {
-	max-height: 400px;
-	overflow-y: auto;
+
 	.items {
 		.item {
 			margin-top:2px;
